--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <div>
                     <a href="./privacy_policy.html">Privacy policy</a>
                 </div>
+                <div>
+                    <p>For support please contact: emilundg@gmail.com </p>
+                </div>
             </div>
         </div>
     </body>
