--- a/eula.html
+++ b/eula.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>ReciShare</title>
+        <title>Fresty</title>
         <style>
             body {
                 font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -14,35 +14,35 @@
     </head>
     <body>
         <div class="card">
-            <h1>ReciShare</h1>
+            <h1>Fresty</h1>
             <h2>End-User License Agreement (EULA) of
-                <span class="app_name">ReciShare</span>
+                <span class="app_name">Fresty</span>
             </h2>
 
             <p>This End-User License Agreement ("EULA") is a legal agreement between you and
-                <span class="company_name">ReciShare</span>
+                <span class="company_name">Fresty</span>
             </p>
 
             <p>This EULA agreement governs your acquisition and use of our
-                <span class="app_name">ReciShare</span>
+                <span class="app_name">Fresty</span>
                 software ("Software") directly from
-                <span class="company_name">ReciShare</span>
+                <span class="company_name">Fresty</span>
                 or indirectly through a
-                <span class="company_name">ReciShare</span>
+                <span class="company_name">Fresty</span>
                 authorized reseller or distributor (a "Reseller").</p>
 
             <p>Please read this EULA agreement carefully before completing the installation
                 process and using the
-                <span class="app_name">ReciShare</span>
+                <span class="app_name">Fresty</span>
                 software. It provides a license to use the
-                <span class="app_name">ReciShare</span>
+                <span class="app_name">Fresty</span>
                 software and contains warranty information and liability disclaimers.</p>
 
             <p>If you register for a free trial of the
-                <span class="app_name">ReciShare</span>
+                <span class="app_name">Fresty</span>
                 software, this EULA agreement will also govern that trial. By clicking "accept"
                 or installing and/or using the
-                <span class="app_name">ReciShare</span>
+                <span class="app_name">Fresty</span>
                 software, you are confirming your acceptance of the Software and agreeing to
                 become bound by the terms of this EULA agreement.</p>
 
@@ -53,10 +53,10 @@
                 not install or use the Software, and you must not accept this EULA agreement.</p>
 
             <p>This EULA agreement shall apply only to the Software supplied by
-                <span class="company_name">ReciShare</span>
+                <span class="company_name">Fresty</span>
                 herewith regardless of whether other software is referred to or described
                 herein. The terms also apply to any
-                <span class="company_name">ReciShare</span>
+                <span class="company_name">Fresty</span>
                 updates, supplements, Internet-based services, and support services for the
                 Software, unless other terms accompany those items on delivery. If so, those
                 terms apply.
@@ -64,16 +64,16 @@
                 <h3>License Grant</h3>
 
                 <p>
-                    <span class="company_name">ReciShare</span>
+                    <span class="company_name">Fresty</span>
                     hereby grants you a personal, non-transferable, non-exclusive licence to use the
-                    <span class="app_name">ReciShare</span>
+                    <span class="app_name">Fresty</span>
                     software on your devices in accordance with the terms of this EULA agreement.</p>
 
                 <p>You are permitted to load the
-                    <span class="app_name">ReciShare</span>
+                    <span class="app_name">Fresty</span>
                     software (for example a PC, laptop, mobile or tablet) under your control. You
                     are responsible for ensuring your device meets the minimum requirements of the
-                    <span class="app_name">ReciShare</span>
+                    <span class="app_name">Fresty</span>
                     software.</p>
 
                 <p>You are not permitted to:</p>
@@ -90,23 +90,23 @@
                     <li>Use the Software in any way which breaches any applicable local, national or
                         international law</li>
                     <li>use the Software for any purpose that
-                        <span class="company_name">ReciShare</span>
+                        <span class="company_name">Fresty</span>
                         considers is a breach of this EULA agreement</li>
                 </ul>
 
                 <h3>Intellectual Property and Ownership</h3>
 
                 <p>
-                    <span class="company_name">ReciShare</span>
+                    <span class="company_name">Fresty</span>
                     shall at all times retain ownership of the Software as originally downloaded by
                     you and all subsequent downloads of the Software by you. The Software (and the
                     copyright, and other intellectual property rights of whatever nature in the
                     Software, including any modifications made thereto) are and shall remain the
                     property of
-                    <span class="company_name">ReciShare</span>.</p>
+                    <span class="company_name">Fresty</span>.</p>
 
                 <p>
-                    <span class="company_name">ReciShare</span>
+                    <span class="company_name">Fresty</span>
                     reserves the right to grant licences to use the Software to third parties.</p>
 
                 <h3>Termination</h3>
@@ -114,7 +114,7 @@
                 <p>This EULA agreement is effective from the date you first use the Software and
                     shall continue until terminated. You may terminate it at any time upon written
                     notice to
-                    <span class="company_name">ReciShare</span>.</p>
+                    <span class="company_name">Fresty</span>.</p>
 
                 <p>It will also terminate immediately if you fail to comply with any term of
                     this EULA agreement. Upon such termination, the licenses granted by this EULA
